--- a/styles.css
+++ b/styles.css
@@ -766,6 +766,10 @@ small {
     display: none;
   }
 
+  .container {
+    padding: 0px;
+  }
+
   .nav {
     position: relative;
     z-index: 1;
