--- a/styles.css
+++ b/styles.css
@@ -486,10 +486,53 @@ small {
 }
 
 /*******************
+    MY EXPERIENCE SECTION
+*************************/
+.my-experience {
+  margin-block-start: var(--section-mt);
+  padding: 4rem 1rem;
+}
+
+.work-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.work-container img {
+  width: 100%;
+  height: 130px;
+}
+
+.work-item {
+  width: 40%;
+  padding-left: 5px;
+  margin-top: 20px;
+}
+
+.bombardier {
+  box-shadow: -6px -6px 0px 0px var(--accent-clr);
+}
+
+.concordia {
+  box-shadow: 6px -6px 0px 0px var(--accent-clr);
+}
+
+.work-item h3 {
+  font-weight: 600 !important;
+}
+
+.work-item b {
+  color: var(--accent-clr);
+}
+
+/*******************
 		MY SKILLS SECTION
 *************************/
 .my-skills {
   margin-block-start: var(--section-mt);
+  background: var(--secondary-clr);
+  padding: var(--section-mt) 1rem;
   padding: 4rem 1rem;
 }
 
@@ -868,6 +911,20 @@ small {
 
   .hero img {
     display: none;
+  }
+
+  .work-container {
+    flex-wrap: nowrap;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .work-item {
+    width: 90%;
+  }
+
+  .concordia {
+    box-shadow: -6px -6px var(--accent-clr);
   }
 
   .my-skills ul {
